# Rechenknecht

./: CMakeLists.txt  Readme.md  Rechenknecht_de_DE.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rechner.cpp  rechner.h  resource.h
.github/workflows/: cmake.yml
RechenknechtTest/: CMakeLists.txt  tst_rechner.cpp
Resources/: Notizen.md  res.qrc
docs/: index.md
